Clean overrided arrow/chevron icon to use HF ones + fix input number overlapping buttons

--- a/theme/src/input-number.scss
+++ b/theme/src/input-number.scss
@@ -159,8 +159,8 @@
     */
 
     @include e(decrease) {
-      right: 0px;
-      bottom: 2px;
+      right: -1px;
+      bottom: 3px;
       top: auto;
       left: auto;
       /*
